<resources>
    <string name="app_name">Tooltopia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings for the main activity headers -->>
    <string name="activity_Home">Home</string>
    <string name="activity_MyCart">My Shopping Cart</string>
    <string name="activity_ConfirmOrder">Confirm Your Order</string>
    <string name="activity_MyOrders">My Orders</string>
    <string name="activity_OrderConfirmed">Order Confirmed!</string>
    <string name="activity_ProductInfo">Product Information</string>
    <string name="activity_Search">Search</string>

    <!-- Strings for the home activity  -->
    <string name="activity_HomeHeading">Your Tool Specialist</string>
    <string name="activity_HomeSubHeading">Generic Hardware!</string>
    <string name="activity_HomeText">In the vast landscape of hardware stores, Tooltopia emerges as the zenith of generic hardware offerings. From the humble hammer to the intricate nuts and bolts that hold our world together, wee have gathered an extensive range of tools and fixtures tailored to suit every craftsmans need. At Tooltopia, we believe in empowering dreams, be it a simple home repair, a DIY project, or a grand construction venture. Our carefully curated inventory is not just a collection of tools but a testament to quality, durability, and affordability.</string>
    <string name="activity_HomeContact">You really should not try to contact us, but if you must here are our details:</string>
    <string name="activity_HomeContactPhone">Ph: (08) 4000 1234</string>
    <string name="activity_HomeContactEmail">Email: void@tooltopia.com.au</string>
    <string name="activity_HomeSearchButton">Search Products</string>

    <!-- Strings for the search activity -->
    <string name="activity_SearchHeading">Search Products</string>
    <string name="activity_SearchSearchButton">Search</string>

    <!-- Strings for the product info activity -->
    <string name="activity_ProductInfoHeading">Product Title</string>
    <string name="activity_ProductInfoDescription">Product Description</string>
    <string name="activity_ProductInfoPrice">Price</string>
    <string name="activity_ProductInfoBackBtn">Back To Products</string>
    <string name="activity_ProductInfoAddToCartBtn">Add To Cart</string>
    <string name="activity_ProductInfoQuantity">Quantity</string>

    <!-- Strings for the my cart activity -->
    <string name="activity_MyCartHeading">My Shopping Cart</string>
    <string name="activity_MyCartBackBtn">Back To Products</string>
    <string name="activity_MyCartCheckoutBtn">Checkout</string>

    <!-- Strings for the confirm order activity -->
    <string name="activity_ConfirmOrderHeading">Confirm Your Order</string>
    <string name="activity_ConfirmOrderBackBtn">Back To Cart</string>
    <string name="activity_ConfirmOrderConfirmBtn">Confirm Order</string>
    <string name="activity_ConfirmOrderSubheading">NO REFUNDS!</string>
    <string name="activity_ConfirmOrderInStoreMethod"><b>In Store:</b> Come in and pick up your order from out friendly staff.</string>
    <string name="activity_ConfirmOrderCurbsideMethod"><b>Curbside:</b> Our friendly staff will meet you in the designated parking spot with your order (card only payments available).</string>

    <!-- Strings for the order confirmed activity -->
    <string name="activity_OrderConfirmedHeading">Order Confirmed!</string>
    <string name="activity_OrderConfirmedBuyMoreBtn">Buy More</string>
    <string name="activity_OrderConfirmedMyOrdersBtn">My Orders</string>
    <string name="activity_OrderConfirmedSubHeading">YOUR MONEY IS GONE!</string>

    <!-- Strings for the my orders activity -->
    <string name="activity_MyOrdersHeading">My Orders</string>
    <string name="activity_MyOrdersBuyMoreBtn">Buy More</string>
    <string name="activity_MyOrdersText">Contact our friendly staff with your order number for more details on your order.</string>




</resources>