<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8ED"
    tools:context=".FirstFragment">

    <include
        android:id="@+id/include5"
        layout="@layout/navbar" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_MyOrders"
        android:textColor="#FF9800"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="378dp"
        android:layout_height="353dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include5"
        app:layout_constraintVertical_bias="0.332">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"></TableLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/BuyMoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Buy More"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <TextView
        android:id="@+id/NoOrdersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You have no orders."
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="132dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="267dp"
            android:layout_height="54dp"
            android:text="@string/activity_MyOrdersText"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/activity_HomeContactEmail"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_HomeContactPhone"
            android:textColor="#FFF" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>